Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59692

Save Page (and Print to PDF) file dialogs cause ASSERTs on Linux in GTK3

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.9.0 Beta 1
    • 5.9.0 Alpha
    • Core: Plugins, WebEngine
    • None
    • Linux 64 Bit
      GTK 3 libraries installed
    • 805a850f04aa42706bbe8d4d8e8161a09fa65645 78f761318a20f320e04a8439101d429136fe3d0a

      Steps to reproduce:
      1. Launch demobrowser
      2. Right click and choose Save Page
      3. In the file dialog that gets opened, click on the 3 dots to choose a file name
      Expected result: File dialog opens
      Actual result: The application asserts because of GTK3 errors. In the debugger, you can continue, and (after a couple of other asserts and contiues) the application will open the file dialog.

        For Gerrit Dashboard: QTBUG-59692
        # Subject Branch Project Status CR V

            qt_webengine_team Qt WebEngine Team
            mibrunin Michael Bruning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes